--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -9,6 +9,11 @@
 </head>
 <body>
 <h2>Gestión de productos</h2>
+<p>Usuario registrado : {{ user.username }} / {{ user.email }}</p>
+<form method="post" action="{% url 'logout' %}">
+    {%  csrf_token %}
+    <button type="submit">Logout</button>
+</form>
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
     <a class="navbar-brand" href="/">Tienda</a>
